# skia-glfw-template

./: CMakeLists.txt  main.cpp
scripts/: build-skia.sh
